# cc3200-rs

./: .gitignore  Cargo.toml  README.md  cc3200.cfg  cc3200.gdb
cc3200-example/: Cargo.toml
cc3200-example/src/: main.rs
cc3200-hal/: Cargo.toml  README.md  memory.x
cc3200-hal/src/: bb.rs  delay.rs  gpio.rs  lib.rs  sysctl.rs
cc3200-pac/: Cargo.toml  LICENSE.md  README.md  generate.sh
cc3200-pac/src/: arcm.rs  gpioa2.rs  lib.rs  ocp_shared.rs  wdt.rs
cc3200-pac/src/arcm/: apspiclken.rs  apspiswrst.rs  camclken.rs  camswrst.rs  dmaclken.rs  dmaswrst.rs  gpio0clken.rs  gpio0swrst.rs  gpio1clken.rs  gpio1swrst.rs  gpio2clken.rs  gpio2swrst.rs  gpio3clken.rs  gpio3swrst.rs  gpio4clken.rs  gpio4swrst.rs  gpt0clken.rs  gpt0swrst.rs  gpt1clken.rs  gpt1swrst.rs  gpt2clken.rs  gpt2swrst.rs  gpt3clken.rs  gpt3swrst.rs  i2cclken.rs  i2cswrst.rs  mcaspclken.rs  mcaspswrst.rs  sdiomclken.rs  sdiomswrst.rs  uart0clken.rs  uart0swrst.rs  uart1clken.rs  uart1swrst.rs  wdtclken.rs  wdtswrst.rs
cc3200-pac/src/gpioa0/: gpiodata.rs  gpioim.rs  gpiois.rs
cc3200-pac/src/gpioa2/: gpioiev.rs  gpioris.rs
cc3200-pac/src/gpioa3/: gpiodir.rs  gpioibe.rs  gpioicr.rs  gpiomis.rs
cc3200-pac/src/ocp_shared/: gpio_pad_config_0.rs  gpio_pad_config_1.rs  gpio_pad_config_10.rs  gpio_pad_config_11.rs  gpio_pad_config_12.rs  gpio_pad_config_13.rs  gpio_pad_config_14.rs  gpio_pad_config_15.rs  gpio_pad_config_16.rs  gpio_pad_config_17.rs  gpio_pad_config_18.rs  gpio_pad_config_19.rs  gpio_pad_config_2.rs  gpio_pad_config_20.rs  gpio_pad_config_21.rs  gpio_pad_config_22.rs  gpio_pad_config_23.rs  gpio_pad_config_24.rs  gpio_pad_config_25.rs  gpio_pad_config_26.rs  gpio_pad_config_27.rs  gpio_pad_config_28.rs  gpio_pad_config_29.rs  gpio_pad_config_3.rs  gpio_pad_config_30.rs  (+8 more)
cc3200-pac/svd/: CC3200.svd
(+8 files in other folders)
