[package]
name = "cc3200-example"
version = "0.1.0"
authors = ["Émile Grégoire <eg@emilegregoire.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.13"
cortex-m-semihosting = "0.3.7"
panic-semihosting = "0.5.6"

embedded-hal = "0.2.5"
cc3200-hal = { path = "../cc3200-hal" }

[[bin]]
name = "cc3200-example"
test = false
bench = false

#[profile.release]
#codegen-units = 1 # better optimizations
#debug = true # symbols are nice and they don't increase the size on flash
#lto = true # better optimizations
